tests/NormalTests/paczka1/fuzzy1/55627143.err
Error in line 3: LSP8W1C A354 95,2
Error in line 5: LSP8W1C A666 24,2
Error in line 2: W4SDFCA7M A354 61,1
Error in line 14: 8dNHXykE S796 32,9
Error in line 17: 8dNHXykE A666 16,8
Error in line 21: sx98 S796 53,5
Error in line 13: htx9TTA A666 946,4
